<resources>
    <string name="app_name">Getter</string>

    <!-- FB App -->
    <string name="facebook_application_id" translatable="false">1667303876644246</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb1667303876644246</string>
    <!-- Twitter App -->
    <string name="twitter_consumer_key" translatable="false">2rQzkDkFl694CJ2jIBLBxyG36</string>
    <string name="twitter_consumer_secret" translatable="false">wciuBDzxrKa7bIYOuKi2ThiKu36INlDGXZjOl7s3Z2aRZeyfIS</string>
    <!-- Google App -->
    <string name="google_web_client_id" translatable="false">988397032639-capicj30m8thad0bjq1r5s6bgvfh4ir2.apps.googleusercontent.com</string>


    <string name="login_user_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_login_btn">Ingresar</string>
    <string name="login_forgot_password_text">Olvidé mi contraseña</string>
    <string name="login_register_btn">Registrarme</string>
    <string name="login_guest_btn">Entrar como invitado</string>
    <string name="login_signin_with">Conectarme con…</string>

    <string name="credits_icons_freepik">
        http://www.freepik.com
    </string>
    <string name="credits_flaticon_link">
        https://www.flaticon.com
    </string>
    <string name="credits_flaticon_license_name">
        Creative Commons BY 3.0
    </string>
    <string name="credits_flaticon_license_link">
        http://creativecommons.org/licenses/by/3.0
    </string>
    <string name="location_permission_rejected">Habilite el servicio de ubicación para una mejor experiencia</string>
    <string name="search_hint">Buscar</string>
    <string name="menu_item_preferences">Preferencias</string>
    <string name="menu_item_history">Historial Getter</string>
    <string name="menu_item_about">Acerca de Getter</string>
    <string name="menu_item_logout">Cerrar sesión</string>
    <string name="menu_item_filter">Filtrar</string>
    <string name="empty_store_offers_list">No hay ofertas en esta tienda</string>
    <string name="store_offers_load_error">Ocurrió un error al cargar las ofertas de esta tienda</string>
    <string name="offer_date">Válido hasta el %s</string>
    <string name="show_offer_qr_code">Muestra este código al empleado de la tienda para canjear esta oferta</string>
    <string name="login_error_message">Ocurrió un error. Intente nuevamente</string>
    <string name="login_invalid_user_message">No existe un usuario con esas credenciales. Intente nuevamente</string>
    <string name="login_user_collision_message">Ingrese con el proveedor (Twitter, FB, Google) con el que se registró, luego conecte su cuenta con este</string>
    <string name="signin_empty_email_error">Ingresa tu correo</string>
    <string name="signin_invalid_email_error">Ingresa un correo válido</string>
    <string name="signin_empty_password_error">Ingresa tu contraseña</string>
    <string name="signin_invalid_password_error">Ingresa una contraseña válida</string>
    <string name="filter_category_header">Categorías</string>
    <string name="filter_category_icon_description">Etiquetas</string>
    <string name="filter_price_header">Precio</string>
    <string name="filter_apply_btn">Filtrar</string>
    <string name="getter_logo_description">Getter Logo</string>
    <string name="menu_item_reset_filters">Cancelar</string>
    <string name="filter_min_price_edit_btn_description">Editar precio mínimo</string>
    <string name="filter_max_price_edit_btn_description">Editar precio máximo</string>
</resources>
