<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="com.oligark.getter.view.ui.SignInActivity"
        android:background="#EF5C4E"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/login_getter_text"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginTop="110dp"
            android:background="#2f2f2f"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:src="@drawable/getter_text"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:src="@drawable/getter_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/login_getter_text"
            android:layout_marginBottom="64dp" />

        <LinearLayout
            android:id="@+id/login_user_layout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_getter_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_person_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_user_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_user_hint"
                android:textColorHint="@android:color/black">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_user_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_password_layout"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/login_user_layout"
            app:layout_constraintRight_toRightOf="@+id/login_user_layout"
            app:layout_constraintTop_toBottomOf="@+id/login_user_layout">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="4dp"
                android:src="@drawable/ic_lock_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_password_hint"
                android:textColorHint="@android:color/black">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/login_password_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="180dp"
            android:layout_height="40dp"
            android:background="@drawable/login_round_border"
            android:text="@string/login_login_btn"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/login_password_layout"
            app:layout_constraintRight_toRightOf="@+id/login_password_layout"
            app:layout_constraintLeft_toLeftOf="@+id/login_password_layout" />

        <TextView
            android:id="@+id/login_forgotten_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_forgot_password_text"
            android:layout_marginTop="4dp"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            app:layout_constraintLeft_toLeftOf="@+id/login_btn"
            app:layout_constraintRight_toRightOf="@+id/login_btn"/>

        <LinearLayout
            android:id="@+id/login_secondary_btn_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingRight="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/login_forgotten_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Button
                android:id="@+id/login_register_btn"
                android:text="@string/login_register_btn"
                style="@style/AppTheme.LoginSecondaryButton" />

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/login_guest_btn"
                android:text="@string/login_guest_btn"
                style="@style/AppTheme.LoginSecondaryButton" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_signin_with_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_secondary_btn_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:layout_gravity="center_vertical" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login_signin_with"
                android:textColor="@android:color/black"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"
                android:background="@android:color/black"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/login_signin_with_layout"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/login_fb_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:src="@drawable/ic_facebook_logo"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/login_google_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:background="@android:color/white"
                android:src="@drawable/ic_google_logo"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <ImageView
                android:id="@+id/login_twitter_btn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/white"
                android:src="@drawable/ic_twitter_logo"/>

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>
